<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.adm.sharedpefscrud.UI.Activities.MainActivity">

    <EditText
        android:id="@+id/person_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_person_id"/>

    <EditText
        android:id="@+id/person_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/person_id"
        android:hint="@string/edit_text_person_name"/>

    <EditText
        android:id="@+id/person_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/person_name"
        android:hint="@string/edit_text_person_surname"/>

    <EditText
        android:id="@+id/person_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/person_surname"
        android:hint="@string/edit_text_person_number"/>

    <EditText
        android:id="@+id/person_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/person_number"
        android:hint="@string/edit_text_person_mail"/>

    <EditText
        android:id="@+id/person_skype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/person_mail"
        android:hint="@string/edit_text_person_skype"/>

    <Button
        android:id="@+id/button_add_person"
        android:text="@string/button_add_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onClickAddPerson"/>

</RelativeLayout>
